<resources>
    <string name="app_name">Shoe Store</string>
    <string name="username">Username:</string>
    <string name="username_hint">Your username</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">password</string>
    <string name="welcome_description">This is a sample application to showcase some of Android applications basic functionality. \nPlease click the instructions button to continue</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">You will see a list of shoes to which you can freely add new shoes.\nIt is a simple ViewModel implementation that should be conserved even after a configuration change such as the process being killed or a device rotation.</string>
    <string name="start">Start</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="log_out">Log out</string>
    <string name="shoe_name">Name:</string>
    <string name="company">Company:</string>
    <string name="shoe_size_label">Size:</string>
    <string name="shoe_description_label">Description</string>
</resources>
